objects/ESC_SM_Error_messages__c.object
<CustomObject>
    <fields>
        <fullName>ESC_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>System Messages</relationshipLabel>
        <relationshipName>SM_Error_messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_Error_Code__c</fullName>
        <label>Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Error_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Source_System__c</fullName>
        <label>Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>System Message</label>
    <nameField>
        <label>Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>